# SimpleEncryptionLibrary

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
doc/: AES.md  LargeInt.md  MD5.md
include/: AEL.hpp  SEL.hpp
src/: AEL.cpp  AES.cpp  AES.hpp  Algo.cpp  CRC.cpp  LargeInt.cpp  MD5.cpp  SEL.cpp  Test.cpp  main.cpp
